# sker

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  TOOL_CALL_UI_GUIDE.md  package.json  pnpm-lock.yaml  tsconfig.json  前端开发规范.md
apps/desktop/: .editorconfig  .eslintignore  .eslintrc.cjs  .prettierignore  README.md  components.json  package-lock.json  package.json  prettier.config.cjs  sker.key  sker.key.pub  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: generate-types.ts  update-protocol-types.bat  update-protocol-types.sh
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: ai_client.rs  auth.rs  commands.rs  credentials.rs  lib.rs  models.rs  settings.rs  settings_migration.rs  storage.rs
apps/desktop/src/app/: App.tsx  index.ts  providers.tsx  router.tsx
apps/desktop/src/hooks/: useAgents.ts  useChat.ts  useProjects.ts  useTaskMonitor.ts
apps/desktop/src/layout/: AgentsPage.tsx  AgentsSidebar.tsx  AppLayout.tsx  BaseLayout.tsx  (+5 more)
crates/arg0/: Cargo.toml
crates/arg0/src/: lib.rs
crates/codex-multi-agent/: Cargo.toml  README.md
crates/codex-multi-agent/examples/: basic_usage.rs
crates/codex-multi-agent/src/: agent_management.rs  events.rs  lib.rs  llm_orchestration.rs  project_management.rs  types.rs  typescript.rs
crates/codex-multi-agent/tests/: integration_tests.rs
crates/core/src/: client.rs  codex.rs  model_provider_info.rs
crates/database/: Cargo.toml  README.md
crates/database/src/: config.rs  connection.rs  error.rs  lib.rs
crates/database/src/entities/: agent.rs  agent_performance_metrics.rs  agent_work_history.rs  code_review.rs  conflict.rs  domain_event.rs  event_publish_log.rs  execution_log.rs  execution_session.rs  human_decision.rs  llm_conversation.rs  llm_session.rs  mod.rs  project.rs  requirement_document.rs  task.rs  task_dependency.rs  user.rs  user_session.rs
crates/database/src/migrations/: mod.rs
crates/database/src/repository/: agent_performance_metrics_repository.rs  agent_repository.rs  agent_work_history_repository.rs  code_review_repository.rs  conflict_repository.rs  domain_event_repository.rs  event_publish_log_repository.rs  execution_log_repository.rs  execution_session_repository.rs  human_decision_repository.rs  llm_conversation_repository.rs  llm_session_repository.rs  mod.rs  project_repository.rs  requirement_document_repository.rs  task_dependency_repository.rs  task_repository.rs  user_repository.rs  user_session_repository.rs
crates/database/tests/: agent_performance_metrics_tests.rs  agent_repository_tests.rs  agent_skill_enhancement_tests.rs  agent_tests.rs  code_review_tests.rs  conflict_repository_tests.rs  conflict_tests.rs  domain_event_repository_tests.rs  execution_log_repository_tests.rs  execution_session_repository_tests.rs  execution_session_tests.rs  human_decision_repository_tests.rs  integration_tests.rs  llm_scheduling_tests.rs  project_context_enhancement_tests.rs  project_tests.rs  task_dependency_enhancement_tests.rs  task_dependency_tests.rs  user_tests.rs
crates/database/tests/common/: mod.rs
crates/execpolicy/: Cargo.toml
crates/mcp-server/src/: codex_message_processor.rs  codex_tool_runner.rs
crates/mcp-types/: Cargo.toml
crates/mcp-types/src/: error_handling.rs  event_stream.rs  lib.rs  protocol_bridge.rs  type_mapping.rs
crates/protocol-ts/: README.md  原理文档.md
(+262 files in other folders)
