[package]
name = "codex-multi-agent"
version = "0.1.0"
edition = "2021"
authors = ["Codex Team <team@codex.dev>"]
description = "多Agent协同开发系统协议扩展"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codex-team/sker"
keywords = ["multi-agent", "protocol", "ai", "development"]
categories = ["development-tools", "api-bindings"]

[features]
default = []

# TypeScript生成支持
typescript = ["ts-rs"]

[dependencies]
# 核心依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 核心依赖
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "7.0", optional = true, features = ["uuid-impl", "chrono-impl"] }

# 引用现有的protocol crate（如果需要兼容现有类型）
# codex-protocol = { path = "../protocol" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }

[[example]]
name = "basic_usage"

[[bin]]
name = "generate-ts"
path = "src/bin/generate_ts.rs"
required-features = ["typescript"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]