[package]
name = "codex-database"
version.workspace = true
edition = "2021"

[dependencies]
# SeaORM 核心依赖 - 使用与桌面应用兼容的版本
sea-orm = { version = "1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls", 
    "macros",
    "with-uuid",
    "with-time",
    "with-json",
    "with-bigdecimal",
] }

# 数据库迁移 - 暂时注释掉，使用手动迁移避免版本冲突
# sea-orm-migration = { version = "1.0", features = [
#     "sqlx-sqlite", 
#     "runtime-tokio-rustls"
# ] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID 支持
uuid = { version = "1.0", features = ["v4", "serde"] }

# 时间处理
time = { version = "0.3", features = ["serde", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

# 十进制数支持
rust_decimal = { version = "1.0", features = ["serde-with-str"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
log = "0.4"
tracing = "0.1"

# 配置管理
config = "0.14"

[dev-dependencies]
# 测试工具
tokio-test = "0.4"
tempfile = "3.0"