[package]
edition = "2024"
name = "mcp-types"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "11", features = ["serde-json-impl", "no-serde-warnings"] }
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
async-stream = "0.3"
